@@ -1,3 +1,14 @@
+Tue Jul 29 16:39:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * utils/BMW/website/BMW.master:
+        * utils/BMW/website/BMW.master.cs:
+        * utils/BMW/website/Log_Formats.aspx.cs:
+        * utils/BMW/website/UT_Create.aspx.cs:
+        * utils/BMW/website/performance.aspx.cs:
+        * utils/BMW/website/unittest.aspx.cs:
+
+          . Changed the BMW's master classname from BMW_Master to Master.
+
 Tue Jul 29 16:38:35 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/website/BMW.master.cs:
